Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35239

Mariabackup incorrectly thinks we are on a multithreaded slave if slave_parallel_workers > 0

    XMLWordPrintable

Details

    Description

      I have built a tool that takes backups using mariabackup, and passes the --slave-info option on command line regardless if the server is a slave or not.

      I have just found out that if slave_parallel_workers is not zero, mariabackup gets confused and errors out with:

      The --slave-info option requires GTID enabled for a multi-threaded slave.
      

      Now, this is not a slave, let alone a multi threaded one – that parameter was a leftover.
      So it should not error out.

      Looking at the code I see:

       if (slave_parallel_workers_var != NULL &&
            atoi(slave_parallel_workers_var) > 0)
        {
          have_multi_threaded_slave= true;
        }
      

      This is clearly incorrect; a proper way to detect if the server is a slave (and a multithreaded one) should be used.

      I verified that{{ set global slave_parallel_workers=0 }}fixes the issue.

      Attachments

        Activity

          People

            serg Sergei Golubchik
            pizzi Rick Pizzi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25h
                0.25h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.